--- a/Quanta/Quanta.csproj
+++ b/Quanta/Quanta.csproj
@@ -6,9 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ncalc" Version="1.3.8" />
     <PackageReference Include="Raylib-cs" Version="6.1.1" />
   </ItemGroup>
 
